istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: test-gateway
  namespace: istio-system
spec: 
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*.hansteve.com"
    - hansteve.com
    port:
      name: http
      number: 80
      protocol: HTTP
